--- a/package.json
+++ b/package.json
@@ -182,7 +182,9 @@
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-reporter": "^1.3.3",
+    "postcss-scss": "^0.1.8",
     "pre-commit": "^1.1.3",
+    "precss": "^1.4.0",
     "psi": "^2.0.3",
     "rimraf": "^2.5.2",
     "shelljs": "^0.7.0",
