--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
+    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap-loader": "^1.0.10",
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "express": "^4.13.4",
