--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "null-loader": "^0.1.1",
     "offline-plugin": "^3.2.0",
     "plop": "^1.5.0",
+    "postcss": "^5.0.21",
     "postcss-cssnext": "^2.5.2",
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.9.1",
