--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "bootstrap": "^4.0.0-alpha.2",
     "bootstrap-loader": "^1.0.10",
     "chalk": "^1.1.3",
+    "classnames": "^2.2.5",
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
