--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
+    "bem-cn": "^2.1.2",
     "bootstrap": "^4.0.0-alpha.2",
     "bootstrap-loader": "^1.0.10",
     "chalk": "^1.1.3",
