--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "bootstrap": "^4.0.0-alpha.2",
     "bootstrap-loader": "^1.0.10",
     "chalk": "^1.1.3",
+    "chance": "^1.0.3",
     "classnames": "^2.2.5",
     "compression": "^1.6.1",
     "express": "^4.13.4",
