Improving css structure

--- a/package.json
+++ b/package.json
@@ -114,6 +114,11 @@
     "lost": "^6.8.1",
     "nlcst-to-string": "^2.0.0",
     "pos": "^0.3.0",
+    "postcss-advanced-variables": "^1.2.2",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-custom-properties": "^5.0.1",
+    "postcss-custom-selector": "^1.0.0",
+    "postcss-nested": "^1.0.0",
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
@@ -132,6 +137,7 @@
     "retext-keywords": "^2.0.2",
     "retext-pos": "lanskey/retext-pos",
     "sanitize.css": "^3.3.0",
+    "webpack-postcss-tools": "^1.1.1",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
