--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "fontfaceobserver": "^1.7.1",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
+    "lodash": "^4.15.0",
     "lost": "^6.8.1",
     "nlcst-to-string": "^2.0.0",
     "pos": "^0.3.0",
