--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
         true,
         {
           "ignorePseudoClasses": [
-            "global"
+            "global",
+            "local"
           ]
         }
       ],
