--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "offline-plugin": "^3.2.0",
     "plop": "^1.5.0",
     "postcss": "^5.0.21",
+    "postcss-bem": "^0.4.1",
     "postcss-cssnext": "^2.5.2",
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.9.1",
