Image onLoad event

--- a/package.json
+++ b/package.json
@@ -125,11 +125,13 @@
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
+    "react-motion": "^0.4.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
     "react-router-scroll": "^0.2.0",
     "react-select": "^1.0.0-beta13",
+    "react-tween-state": "^0.1.5",
     "redux": "^3.5.2",
     "redux-form": "^5.3.1",
     "redux-immutable": "^3.0.6",
@@ -140,6 +142,7 @@
     "retext-keywords": "^2.0.2",
     "retext-pos": "lanskey/retext-pos",
     "sanitize.css": "^3.3.0",
+    "velocity-react": "^1.1.5",
     "webpack-postcss-tools": "^1.1.1",
     "whatwg-fetch": "^1.0.0"
   },
