Temporary fix for webpack resolver (https://github.com/benmosher/eslint-plugin-import/issues/265)

--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
           ]
         }
       ],
-      "indentation": 2
+      "indentation": 2,
+      "import/no-unresolved": 0
     }
   },
   "dependencies": {
