--- a/package.json
+++ b/package.json
@@ -126,6 +126,8 @@
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
+    "react-icons": "^2.2.1",
+    "react-inlinesvg": "^0.5.3",
     "react-motion": "^0.4.4",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
