--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     },
     "rules": {
       "max-len": 0,
-      "import/no-unresolved": 0
+      "import/no-unresolved": 0,
+      "camelcase": 2
     },
     "settings": {
       "import/resolver": {
