--- a/package.json
+++ b/package.json
@@ -76,7 +76,10 @@
       "max-len": 0,
       "import/no-unresolved": 0,
       "camelcase": 2,
-      "brace-style": ["error", "stroustrup"]
+      "brace-style": [
+        "error",
+        "stroustrup"
+      ]
     },
     "settings": {
       "import/resolver": {
@@ -147,6 +150,7 @@
     "retext-keywords": "^2.0.2",
     "retext-pos": "lanskey/retext-pos",
     "sanitize.css": "^3.3.0",
+    "urijs": "^1.18.1",
     "velocity-react": "^1.1.5",
     "webpack-postcss-tools": "^1.1.1",
     "whatwg-fetch": "^1.0.0"
@@ -164,6 +168,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "camel_case": "^0.4.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.4.2",
     "cheerio": "^0.20.0",
