--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-custom-selector": "^1.0.0",
     "postcss-nested": "^1.0.0",
+    "query-string": "^4.2.3",
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.0.1",
