--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:firefox": "npm run test -- --browsers Firefox",
+    "test:firefox": "npm run test:watch -- --browsers Firefox",
     "test:safari": "npm run test -- --browsers Safari",
     "test:ie": "npm run test -- --browsers IE",
     "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
