--- a/package.json
+++ b/package.json
@@ -76,10 +76,7 @@
       "max-len": 0,
       "import/no-unresolved": 0,
       "camelcase": 2,
-      "brace-style": [
-        "error",
-        "stroustrup"
-      ]
+      "brace-style": 0
     },
     "settings": {
       "import/resolver": {
