--- a/package.json
+++ b/package.json
@@ -104,9 +104,11 @@
     "postcss-custom-selector": "^1.0.0",
     "postcss-nested": "^1.0.0",
     "query-string": "^4.2.3",
-    "react": "^15.0.1",
+    "react": "^15.4.0",
+    "react-addons-css-transition-group": "^15.4.0",
     "react-addons-shallow-compare": "^15.1.0",
-    "react-dom": "^15.0.1",
+    "react-addons-transition-group": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-icons": "^2.2.1",
     "react-inlinesvg": "^0.5.3",
     "react-motion": "^0.4.4",
@@ -114,7 +116,7 @@
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
     "react-router-scroll": "^0.2.0",
-    "react-select": "^1.0.0-beta13",
+    "react-select": "^1.0.0-rc.2",
     "react-toolbox": "^1.2.5",
     "react-tween-state": "^0.1.5",
     "redux": "^3.5.2",
@@ -136,6 +138,7 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-import": "^1.0.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
