--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react-addons-shallow-compare": "^15.1.0",
     "react-addons-transition-group": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-addons-test-utils": "^15.4.0",
     "react-icons": "^2.2.1",
     "react-inlinesvg": "^0.5.3",
     "react-motion": "^0.4.4",
@@ -155,7 +156,7 @@
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.4.1",
+    "enzyme": "^2.6.0",
     "eslint": "^2.10.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.2.4",
