SwiperBlock working version

--- a/package.json
+++ b/package.json
@@ -107,9 +107,9 @@
     "react": "^15.4.0",
     "react-addons-css-transition-group": "^15.4.0",
     "react-addons-shallow-compare": "^15.1.0",
+    "react-addons-test-utils": "^15.4.0",
     "react-addons-transition-group": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-addons-test-utils": "^15.4.0",
     "react-icons": "^2.2.1",
     "react-inlinesvg": "^0.5.3",
     "react-motion": "^0.4.4",
@@ -130,6 +130,8 @@
     "retext-keywords": "^2.0.2",
     "retext-pos": "lanskey/retext-pos",
     "sanitize.css": "^3.3.0",
+    "swipejs": "^2.2.2",
+    "swiper": "^3.4.0",
     "urijs": "^1.18.1",
     "velocity-react": "^1.1.5",
     "webpack-postcss-tools": "^1.1.1",
