--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zxresult",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Web application which helps you to find a movie you wish to watch!",
   "repository": {
     "type": "git",
@@ -13,41 +13,56 @@
   "author": "Emanuel Slotwinski",
   "license": "CC-BY-NC-SA",
   "scripts": {
+    "analyze:clean": "rimraf stats.json",
+    "preanalyze": "npm run analyze:clean",
+    "analyze": "node ./internals/scripts/analyze.js",
+    "extract-intl": "babel-node --presets latest,stage-0 -- ./internals/scripts/extract-intl.js",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
-    "prebuild": "npm run test && npm run build:clean",
-    "build:clean": "rimraf ./build/*",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
-    "analyze": "node ./internals/scripts/analyze.js",
+    "postinstall": "npm run build:dll",
+    "prebuild": "npm run build:clean && npm run test",
+    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress",
+    "build:clean": "npm run test:clean && rimraf ./build",
+    "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
     "pagespeed": "node ./internals/scripts/pagespeed.js",
-    "presetup": "npm i chalk",
+    "presetup": "npm i chalk shelljs",
     "setup": "node ./internals/scripts/setup.js",
+    "postsetup": "npm run build:dll",
     "clean": "shjs ./internals/scripts/clean.js",
+    "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
     "generate": "plop --plopfile internals/generators/index.js",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint . --ignore-path .gitignore --ignore-pattern internals/scripts -c .eslintrc.js ",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
+    "lint:js": "npm run lint:eslint -- . ",
     "lint:css": "stylelint ./app/**/*.css",
     "lint:staged": "lint-staged",
-    "pretest": "npm run lint",
+    "pretest": "npm run test:clean && npm run lint",
+    "test:clean": "rimraf ./coverage",
     "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:firefox": "npm run test:watch -- --browsers Firefox",
+    "test:firefox": "npm run test -- --browsers Firefox",
     "test:safari": "npm run test -- --browsers Safari",
     "test:ie": "npm run test -- --browsers IE",
     "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
   },
   "lint-staged": {
-    "eslint": "*.js",
-    "stylelint": "*.css"
+    "eslint": "*.js"
   },
   "pre-commit": "lint:staged",
   "babel": {
     "presets": [
-      "es2015-webpack",
+      [
+        "latest",
+        {
+          "es2015": {
+            "modules": false
+          }
+        }
+      ],
       "react",
       "stage-0"
     ],
@@ -61,159 +76,153 @@
           "transform-react-constant-elements",
           "transform-react-inline-elements"
         ]
+      },
+      "test": {
+        "plugins": [
+          "istanbul"
+        ]
       }
     }
   },
-  "stylelint": {
-    "extends": "stylelint-config-standard",
-    "rules": {
-      "font-family-name-quotes": "always-where-recommended",
-      "selector-pseudo-class-no-unknown": [
-        true,
-        {
-          "ignorePseudoClasses": [
-            "global",
-            "local"
-          ]
-        }
-      ],
-      "indentation": 2
-    }
+  "dllPlugin": {
+    "path": "node_modules/react-boilerplate-dlls",
+    "exclude": [
+      "chalk",
+      "react-icons",
+      "async",
+      "compression",
+      "cross-env",
+      "express",
+      "ip",
+      "minimist",
+      "sanitize.css"
+    ],
+    "include": [
+      "core-js",
+      "lodash",
+      "eventsource-polyfill"
+    ]
   },
   "dependencies": {
-    "babel-polyfill": "^6.7.4",
-    "bem-cn": "^2.1.2",
-    "bootstrap": "^4.0.0-alpha.2",
-    "bootstrap-loader": "^1.0.10",
+    "babel-polyfill": "6.16.0",
     "chalk": "^1.1.3",
     "chance": "^1.0.3",
     "classnames": "^2.2.5",
-    "compression": "^1.6.1",
-    "express": "^4.13.4",
-    "file-loader": "^0.9.0",
-    "fontfaceobserver": "^1.7.1",
-    "history": "^2.1.0",
+    "compression": "1.6.2",
+    "cross-env": "3.1.3",
+    "express": "4.14.0",
+    "fontfaceobserver": "2.0.5",
+    "history": "^4.4.1",
     "immutable": "^3.8.1",
-    "lodash": "^4.15.0",
+    "invariant": "2.2.1",
+    "ip": "1.1.3",
+    "lodash": "^4.16.4",
     "lost": "^6.8.1",
-    "nlcst-to-string": "^2.0.0",
-    "pos": "^0.3.0",
-    "postcss-advanced-variables": "^1.2.2",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-custom-properties": "^5.0.1",
-    "postcss-custom-selector": "^1.0.0",
-    "postcss-nested": "^1.0.0",
     "query-string": "^4.2.3",
-    "react": "^15.4.0",
+    "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.0",
-    "react-addons-shallow-compare": "^15.1.0",
-    "react-addons-test-utils": "^15.4.0",
     "react-addons-transition-group": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "react-dom": "^15.4.1",
     "react-icons": "^2.2.1",
     "react-inlinesvg": "^0.5.3",
-    "react-motion": "^0.4.4",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.3.0",
-    "react-router-redux": "^4.0.4",
-    "react-router-scroll": "^0.2.0",
+    "react-redux": "4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "4.0.6",
+    "react-router-scroll": "^0.3.3",
     "react-select": "^1.0.0-rc.2",
-    "react-toolbox": "^1.2.5",
-    "react-tween-state": "^0.1.5",
-    "redux": "^3.5.2",
-    "redux-form": "^5.3.1",
-    "redux-immutable": "^3.0.6",
+    "redux": "3.6.0",
+    "redux-immutable": "3.0.8",
     "redux-mock-store": "^1.1.2",
     "redux-saga": "^0.12.1",
-    "reselect": "^2.5.1",
-    "retext": "^3.0.0",
-    "retext-keywords": "^2.0.2",
-    "retext-pos": "lanskey/retext-pos",
-    "sanitize.css": "^3.3.0",
-    "swipejs": "^2.2.2",
+    "reselect": "2.5.4",
+    "sanitize.css": "4.1.0",
     "swiper": "^3.4.0",
-    "urijs": "^1.18.1",
-    "velocity-react": "^1.1.5",
-    "webpack-postcss-tools": "^1.1.1",
+    "warning": "3.0.0",
     "whatwg-fetch": "^1.0.0"
   },
+  "peerDependencies": {
+    "history": "^1.17.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-import": "^1.0.1",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-react-constant-elements": "^6.8.0",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-es2015-webpack": "^6.4.1",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.18.0",
+    "babel-eslint": "7.1.0",
+    "babel-loader": "6.2.7",
+    "babel-plugin-istanbul": "2.0.3",
+    "babel-plugin-react-intl": "2.2.0",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-react-constant-elements": "6.9.1",
+    "babel-plugin-transform-react-inline-elements": "6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.10",
+    "babel-preset-latest": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.16.0",
     "camel_case": "^0.4.0",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
-    "cheerio": "^0.20.0",
-    "coveralls": "^2.11.9",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.6.0",
-    "eslint": "^2.10.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-import-resolver-webpack": "^0.2.4",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.1.1",
-    "eventsource-polyfill": "^0.9.6",
-    "expect": "^1.18.0",
-    "expect-jsx": "^2.5.1",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.16.0",
+    "chai": "3.5.0",
+    "chai-enzyme": "0.5.2",
+    "cheerio": "0.22.0",
+    "coveralls": "2.11.14",
+    "css-loader": "0.25.0",
+    "enzyme": "2.5.1",
+    "eslint": "3.9.0",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-config-airbnb-base": "9.0.0",
+    "eslint-import-resolver-webpack": "0.6.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-redux-saga": "0.1.5",
+    "eventsource-polyfill": "0.9.6",
+    "expect": "1.20.2",
+    "expect-jsx": "2.6.0",
+    "exports-loader": "0.6.3",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "file-loader": "0.9.0",
+    "html-loader": "0.4.4",
+    "html-webpack-plugin": "2.24.0",
+    "image-webpack-loader": "2.0.0",
     "imports-loader": "^0.6.5",
-    "ip": "^1.1.2",
-    "isparta": "^4.0.0",
-    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.0.1",
+    "karma-mocha": "^1.2.0",
     "karma-mocha-reporter": "^2.0.3",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "lint-staged": "^1.0.0",
+    "karma-webpack": "^1.8.0",
+    "lint-staged": "^3.2.0",
     "minimist": "^1.2.0",
-    "mocha": "^2.4.5",
-    "ngrok": "2.1.8",
+    "mocha": "^3.1.2",
+    "ngrok": "2.2.3",
     "null-loader": "^0.1.1",
-    "offline-plugin": "^3.2.0",
+    "offline-plugin": "^3.2.2",
     "plop": "^1.5.0",
-    "postcss": "^5.0.21",
-    "postcss-bem": "^0.4.1",
-    "postcss-cssnext": "^2.5.2",
+    "postcss": "^5.2.6",
+    "postcss-cssnext": "^2.8.0",
     "postcss-focus": "^1.0.0",
-    "postcss-loader": "^0.9.1",
-    "postcss-reporter": "^1.3.3",
+    "postcss-loader": "^1.1.0",
+    "postcss-reporter": "1.4.1",
     "postcss-scss": "^0.1.8",
+    "postcss-advanced-variables": "^1.2.2",
+    "postcss-custom-properties": "^5.0.1",
+    "postcss-custom-selectors": "^1.0.0",
+    "postcss-nested": "^1.0.0",
     "pre-commit": "^1.1.3",
     "precss": "^1.4.0",
-    "psi": "^2.0.3",
-    "rimraf": "^2.5.2",
-    "shelljs": "^0.7.0",
+    "psi": "^2.0.4",
+    "rimraf": "^2.5.4",
+    "shelljs": "0.7.5",
     "sinon": "^2.0.0-pre",
     "style-loader": "^0.13.1",
-    "stylelint": "^6.3.3",
-    "stylelint-config-standard": "^8.0.0",
+    "stylelint": "7.5.0",
+    "stylelint-config-standard": "14.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.8",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "1.8.4",
+    "webpack-hot-middleware": "2.13.1"
   }
 }
