--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
           "app"
         ],
         "plugins": [
+          "transform-export-extensions",
           "transform-react-remove-prop-types",
           "transform-react-constant-elements",
           "transform-react-inline-elements"
@@ -89,7 +90,6 @@
     "exclude": [
       "chalk",
       "react-icons",
-      "async",
       "compression",
       "cross-env",
       "express",
@@ -151,6 +151,7 @@
     "babel-plugin-istanbul": "2.0.3",
     "babel-plugin-react-intl": "2.2.0",
     "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-export-extensions": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-inline-elements": "6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "0.2.10",
@@ -202,15 +203,15 @@
     "offline-plugin": "^3.2.2",
     "plop": "^1.5.0",
     "postcss": "^5.2.6",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-focus": "^1.0.0",
-    "postcss-loader": "^1.1.0",
-    "postcss-reporter": "1.4.1",
-    "postcss-scss": "^0.1.8",
     "postcss-advanced-variables": "^1.2.2",
+    "postcss-cssnext": "^2.8.0",
     "postcss-custom-properties": "^5.0.1",
     "postcss-custom-selectors": "^1.0.0",
+    "postcss-focus": "^1.0.0",
+    "postcss-loader": "^1.1.0",
     "postcss-nested": "^1.0.0",
+    "postcss-reporter": "1.4.1",
+    "postcss-scss": "^0.1.8",
     "pre-commit": "^1.1.3",
     "precss": "^1.4.0",
     "psi": "^2.0.4",
