--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
       },
       "test": {
         "plugins": [
-          "istanbul"        ]
+          "istanbul"
+        ]
       }
     }
   },
