--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "html-webpack-plugin": "2.24.0",
     "image-webpack-loader": "2.0.0",
     "imports-loader": "^0.6.5",
+    "jsdoc": "^3.4.3",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
