--- a/package.json
+++ b/package.json
@@ -210,9 +210,11 @@
     "postcss-custom-selectors": "^1.0.0",
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^1.1.0",
+    "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
     "postcss-reporter": "1.4.1",
     "postcss-scss": "^0.1.8",
+    "postcss-simple-vars": "^3.0.0",
     "pre-commit": "^1.1.3",
     "precss": "^1.4.0",
     "psi": "^2.0.4",
