--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Boilerplate",
+  "name": "ZX RESULT - Find your movie right away!",
   "icons": [
     {
       "src": "favicon.png",
